<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宝贝计划</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="channel_id">shoujizhushou</string>
    <string name="apk_download_name">bb.apk</string>
     <string name="str_status_network_not_available">当前网络不可用,请检查网络设置后再试</string>
    <string name="str_status_network_timeout">网络连接超时,请稍候再试</string>
    <string name="str_status_system_error">系统异常，请稍后再试</string>
    <string name="str_status_network_error">网络连接异常,请重试</string>
    <string name="app_no_data">暂无数据</string>
    <string name="app_no_more_data">暂无更多数据</string>
    <string name="request_dialog_loading_content">加载中....</string>
    <string name="apk_start_download">开始下载</string>
	<string name="apk_download_faile">下载失败！</string>
	<string name="apk_download_progress">已下载%1$s%</string>
	<string name="apk_verson_check_text">您已经是最新版本</string>
	
	<!-- 登录注册 -->
	<string name="login_msg">登录</string>
	<string name="reg_msg">快速注册</string>
	<string name="forget_psd_msg">忘记你的密码呢？</string>
	<string name="reg_yzm_msg">获取短信验证码</string>
	<string name="user_agreement_msg">我已阅读并同意XXX</string>
	<string name="user_agreement_msg2">《用户协议》</string>
	
	<!-- 圈子 -->
	<string name="unReadMsg">您有 %d 条未读消息</string>

    <!-- 语音播放器 -->
    <string name="siger">我是歌手</string>
    <string name="artist">小巫</string>
    <string name="time">4:50</string>
    <string name="cancel">取消</string>
    <string  name="confrim">确定</string>
    <string name="shuffle_none">随机播放已关闭</string>
    <string name="shuffle">随机播放已打开</string>
    <string name="repeat_none">重复播放已关闭</string>
    <string name="repeat_current">重复播放当前歌曲</string>
    <string name="repeat_all">重复播放所有歌曲</string>
    <string name="operation">将此歌曲处理为</string>
    <string name="playing">正在播放。。。</string>
    <string name="skin_settings">皮肤设置</string>
    <string name="menu_exit_txt">退出</string>
    <string name="oftenuse">常用</string>
    <string name="about_infomation">本播放器由小巫开发，名为《简、美音乐播放器》，仅供学习和技术交流之用</string>
    <string name="brightness_title">日照模式</string>
    <string name="darkness_title">夜晚模式</string>
    <string name="info">操作:</string>
    <string name="dialog_messenge">你确定要退出程序吗？</string>
    <string name="about_title">关于</string>
    <string name="menu_time_txt">定时关闭</string>

    <!-- 天气-->
    <string name="weather_unit">%1$s&#176;</string>
</resources>
